base/src/test/resources/failure/syntax/issue164.aya.txt
In file $FILE:3:26 ->

  1 | def uncurry (A : Type) (B : Type) (C : Type)
  2 |              (f : Pi A B -> C)
  3 |              (p : Sig A  B) : C
                                ^^

Error: Parser error: extraneous input ')' expecting {INFIX, POSTFIX, 'Type', '**', '{', '(', '{?', NUMBER, '_', STRING, ID}
Parsing interrupted due to error(s).
What are you doing?
